force-app/main/default/objects/Producto_de_modulo__c/Producto_de_modulo__c.object-meta.xml
<CustomObject>
    <label>Producto de módulo</label>
    <nameField>
        <displayFormat>PDM-{0000}</displayFormat>
        <label>Nro de Producto de módulo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de módulo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>