force-app/main/default/objects/Producto_de_modulo__c/fields/Categoria_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Categoria_de_producto__c</fullName>
    <formula>Formula__r.Modulo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria de producto</label>
    <type>Text</type>
</CustomField>