force-app/main/default/objects/Producto_de_modulo__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fórmula</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Producto_para__c</field>
            <operation>equals</operation>
            <value>Best Care</value>
        </filterItems>
        <filterItems>
            <field>Product2.Producto_SAP__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos de módulo</relationshipLabel>
    <relationshipName>Planes_de_cuidado</relationshipName>
    <type>Lookup</type>
</CustomField>