force-app/main/default/objects/Producto_de_modulo__c/fields/Id_de_SAP__c.field-meta.xml
<CustomField>
    <fullName>Id_de_SAP__c</fullName>
    <formula>Formula__r.Codigo_producto_Id_externo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id de SAP</label>
    <type>Text</type>
</CustomField>