force-app/main/default/objects/Producto_de_modulo__c/fields/Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Laboratorio__c</fullName>
    <formula>Formula__r.Laboratorio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laboratorio</label>
    <type>Text</type>
</CustomField>