force-app/main/default/objects/Producto_de_modulo__c/fields/Modulo_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Modulo_de_paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Módulo de paciente</label>
    <referenceTo>Modulo_de_paciente__c</referenceTo>
    <relationshipName>Planes_de_cuidado</relationshipName>
    <type>Lookup</type>
</CustomField>